Security & Access Rights Auditor/main/default/objects/UserDictionaryColumnConfig__c/UserDictionaryColumnConfig__c.object-meta.xml
<CustomObject>
    <label>UserDictionaryColumnConfig</label>
    <nameField>
        <label>UserDictionaryColumnConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserDictionaryColumnConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>