Security & Access Rights Auditor/main/default/objects/UserDictionaryColumnConfig__c/fields/ShowComplianceCategorization__c.field-meta.xml
<CustomField>
    <fullName>ShowComplianceCategorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowComplianceCategorization</label>
    <type>Checkbox</type>
</CustomField>