Security & Access Rights Auditor/main/default/objects/UserDictionaryColumnConfig__c/fields/ShowDescription__c.field-meta.xml
<CustomField>
    <fullName>ShowDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowDescription</label>
    <type>Checkbox</type>
</CustomField>