Security & Access Rights Auditor/main/default/objects/UserDictionaryColumnConfig__c/fields/ShowFieldName__c.field-meta.xml
<CustomField>
    <fullName>ShowFieldName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowFieldName</label>
    <type>Checkbox</type>
</CustomField>