Security & Access Rights Auditor/main/default/objects/UserDictionaryColumnConfig__c/fields/ShowFieldUsage__c.field-meta.xml
<CustomField>
    <fullName>ShowFieldUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowFieldUsage</label>
    <type>Checkbox</type>
</CustomField>