Security & Access Rights Auditor/main/default/objects/UserDictionaryColumnConfig__c/fields/ShowSensitivity__c.field-meta.xml
<CustomField>
    <fullName>ShowSensitivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowSensitivity</label>
    <type>Checkbox</type>
</CustomField>